# Project

./: .gitignore  CMakeLists.txt  README.md  main  main.c
Bitmap/: bmp_import.c  bmp_import.h
Configuration Of Matrices/: ConfigureMatrices.c  ConfigureMatrices.h  RelationshipMethods.c  RelationshipMethods.h  matrix_manipulations.c  matrix_manipulations.h
Databehandling/: userPreferences.c  userPreferences.h
Dijkstra's algorithm/: dijkstra.c  dijkstra.h  priority_queue.c  priority_queue.h
Mock Values/Values/: soil.c  vegetation.c  water_levels.c
Mock_Values/: Explanation.txt
Mock_Values/Values/: roads_and_infrastructure.c  steepness.c
OutputMatrices/: outputMatrix.txt
Relationship Methods/: ConfigureMatrices.c  ConfigureMatrices.h  RelationshipMethods.c  RelationshipMethods.h
User Preferences/: userPreferences.c  userPreferences.h
Visualization/: CreateVisualization.py  SomePythonVis.c  SomePythonVis.h  Visualization.c  Visualization.h  VisualizeMatrixGS.py  exportMatrixToFile.c  exportMatrixToFile.h  matrix_manipulations.c  matrix_manipulations.h  pre_process_matrix.c  pre_process_matrix.h
